update to add more inter-doc links
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@768 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_remote.html
+++ b/www/applications_remote.html
@@ -39,7 +39,11 @@
         <p>To open the application tab, right-click the application node in the Applications window and choose Open.
         When you click Open, the Overview tab of the application tab opens in the main window.</p>
         <p>For more see the following document:</p>
-        <ul><li><a href="overview_tab.html">Viewing Application Overview</a></li></ul>
+        <ul>
+            <li><a href="overview_tab.html">Viewing Application Overview</a></li>
+            <li><a href="monitor_tab.html">Monitoring an Application</a></li>
+            <li><a href="threads.html">Monitoring Threads</a></li>
+        </ul>
 
 
         <h3>Monitoring Application Activity</h3>
