--- a/www/intro.html
+++ b/www/intro.html
@@ -62,15 +62,14 @@
         that enables you to easily view and navigate the data.
         Saved thread dumps and heap dumps are also opened in the main window.</p>
         
-        <p>For information about the tabs used to display application data, see the following pages:</p>
+        <p>For information about the application data that can be displayed in the main window, see the following pages:</p>
         <ul>
-            <li><a href="overview_tab.html">Overview Tab</a></li>
-            <li><a href="monitor_tab.html">Monitor Tab</a></li>
-            <li><a href="profiler.html">Profiling Tab</a></li>
-            <li><a href="mbeans_tab.html">MBeans Tab</a>
-            <!--<a href="coredumps.html">Working with Coredumps</a>--></li>
-            <li><a href="threads.html">Threads Tab</a></li>
-            <li><a href="heapdump.html">Heap Dump</a></li>
+            <li><a href="overview_tab.html">Application Overview</a></li>
+            <li><a href="monitor_tab.html">Monitoring an Application</a></li>
+            <li><a href="threads.html">Monitoring Threads</a></li>
+            <li><a href="heapdump.html">Browsing a Heap Dump</a></li>
+            <li><a href="profiler.html">Profiling an Application</a> (local applications only)</li>
+            <li><a href="mbeans_tab.html">MBeans Tab</a> (requires MBeans plugin)</li>
         </ul>
 
 
@@ -94,7 +93,7 @@
 
         <p>For more information about VisualVM plugins, see the following documents:</p>        
         <ul>
-            <li><a href="plugins.html">Working with VisualVM Plugins</a></li>
+            <!--<li><a href="plugins.html">Working with VisualVM Plugins</a></li>-->
             <li><a href="api-quickstart.html">Getting Started Extending VisualVM</a></li>
         </ul>
 
