--- a/www/mbeans_tab.html
+++ b/www/mbeans_tab.html
@@ -1,4 +1,4 @@
-<!-- COPYRIGHT 2008 SUN MICROSYSTEMS -->
+<!-- Copyright 2008 Sun Microsystems, Inc.  All Rights Reserved.  -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
