Added extra info about MBeanAttributeInfo
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@772 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/mbeans_tab.html
+++ b/www/mbeans_tab.html
@@ -94,7 +94,7 @@ com.sun.example:type=Triangle,side=isosceles,name=3</pre>
 <p>You can subscribe to notifications from MBeans by selecting the Notifications tab, and clicking the Subscribe button at the bottom of the main pane. The  number of notifications received is displayed in square brackets, and the Notifications node  itself will appear in bold text when new notifications are received. The notifications  of the <span class="style1">AnagramsStats</span>  example MBean from the <a href="http://www.netbeans.org/kb/60/java/jmx-tutorial.html">JMX NetBeans Tutorial</a> are shown in the figure below.</p>
 <img src="images/docs/mbean-notifs.png" alt="Viewing an MBean's notifications." /><a name="gdeif" id="gdeif"></a>
 <h2>MBean Metadata</h2>
-<p>An MBean's metadata, or <span class="style1">MBeanInfo</span>, is displayed by the Metadata tab. This includes information like the MBean's object name, class name and a brief description, as shown below for the <span class="style1">Memory</span> platform MBean. </p>
+<p>An MBean's metadata, or <span class="style1">MBeanInfo</span>, is displayed by the Metadata tab. This includes information like the MBean's object name, class name, a brief description,  and Descriptor information. The Metadata tab also shows the MBean's <span class="style1">MBeanAttributeInfo</span>. The Metadata tab for the <span class="style1">Memory</span> platform MBean is shown below.</p>
 <p><img src="images/docs/mbean-metadata.png" /></p>
 <h2>HotSpot Diagnostic MBean</h2>
 <p>VisualVM's MBeans tab also allows you to tell the HotSpot VM to  perform a heap dump, and to get or set a VM option via  the <span class="style1">HotSpotDiagnostic</span> platform MBean.</p>
