--- a/www/docindex.html
+++ b/www/docindex.html
@@ -28,6 +28,7 @@
                 <li><a href="coredumps.html">Working with Coredumps</a></li>
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
                 <li><a href="heapdump.html">Browsing a Heap Dump</a></li>
+                <li><a href="mbeans_tab.html">Working with MBeans</a></li>
             </ul>
             </li>
             <li><a href="troubleshooting.html">Troubleshooting Guide</a></li>
