--- a/www/jconsole_plugin_wrapper_tab.html
+++ b/www/jconsole_plugin_wrapper_tab.html
@@ -31,15 +31,15 @@
   <li>Now, if you highlight a running Java application, right-click, and  then select 'Open', you will see the JConsole Plugins tab in VisualVM's  right-hand window. However, no JConsole plug-ins are displayed in the tab yet, as shown below.
 <p> <img src="images/docs/jconsole-plugins-tab.png" alt="JConsole plug-in wrapper tab." width="880" height="489" /></p></li>
 
-<li>You can now import your custom JConsole plug-ins via the Tools | Options menu. </p>
-<p><img src="images/docs/options-panel.png" alt="The options panel." width="729" height="467" /></li>
+<li>You can now import your custom JConsole plug-ins via the Tools | Options menu.</li>
 <li>Click on 'JConsole Plugins'. </li>
 <li>Click on 'Add JAR/Folder' and navigate to your JConsole plug-in's Java archive (JAR) file. An example JConsole plug-in called JTop is provided with the Java SE 6 platform. The JTop application is a JDK demonstration that shows the CPU usage of all  threads running in the application. This demo is useful for identifying threads that  have high CPU consumption, and it has been updated to be used as  a JConsole plug-in as well as a standalone GUI. The  JAR file for the JTop plug-in is found <em>at <span class="style1">JDK_HOME</span></em><span class="style1">/demo/management/JTop/JTop.jar</span>, where <em><span class="style1">JDK_HOME</span></em> is the location where the JDK software is installed.
   <p><img src="images/docs/select-jconsole-plugin.png" alt="Selecting the JConsole plug-in." width="731" height="467" />    </li>
+<li>In the JConsole Plugins Options panel, you can also set the polling period. This option defines the regularity with which the JConsole tab will update the information displayed by the JConsole plug-ins displayed. 
 <li>Close the Options panel by clicking OK. 
-<li>In the main VisualVM interface,  close and then re-open the tab for the application you are monitoring. A JTop tab should now be visible in the JConsole Plugins tab.
-<p><img src="images/docs/jtop-plugin.png" alt="The JConsole plugin tab, showing the JTop plug-in." width="589" height="388" />
-<p>The JTop tab has been added, showing the CPU usage of the various threads running.
+<li>Restart VisualVM. A JTop tab should now be visible in the JConsole Plugins tab.
+  <p><img src="images/docs/jtop-plugin.png" alt="The JConsole plugin tab, showing the JTop plug-in."/>
+  <p>The JTop tab has been added, showing the CPU usage of the various threads running.  
 </ol>
 </body>
 </html>
