Added info about polling.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@838 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/jconsole_plugin_wrapper_tab.html
+++ b/www/jconsole_plugin_wrapper_tab.html
@@ -35,7 +35,7 @@
 <li>Click on 'JConsole Plugins'. </li>
 <li>Click on 'Add JAR/Folder' and navigate to your JConsole plug-in's Java archive (JAR) file. An example JConsole plug-in called JTop is provided with the Java SE 6 platform. The JTop application is a JDK demonstration that shows the CPU usage of all  threads running in the application. This demo is useful for identifying threads that  have high CPU consumption, and it has been updated to be used as  a JConsole plug-in as well as a standalone GUI. The  JAR file for the JTop plug-in is found <em>at <span class="style1">JDK_HOME</span></em><span class="style1">/demo/management/JTop/JTop.jar</span>, where <em><span class="style1">JDK_HOME</span></em> is the location where the JDK software is installed.
   <p><img src="images/docs/select-jconsole-plugin.png" alt="Selecting the JConsole plug-in." width="731" height="467" />    </li>
-<li>In the JConsole Plugins Options panel, you can also set the polling period. This option defines the regularity with which the JConsole tab will update the information displayed by the JConsole plug-ins displayed. 
+<li>In the JConsole Plugins Options panel, you can also set the polling period. This option defines the regularity with which the JConsole Plugins tab will update the information presented by the different JConsole plug-ins that have been imported into the tab. 
 <li>Close the Options panel by clicking OK. 
 <li>Restart VisualVM. A JTop tab should now be visible in the JConsole Plugins tab.
   <p><img src="images/docs/jtop-plugin.png" alt="The JConsole plugin tab, showing the JTop plug-in."/>
