Added link to JConsole plug-in wrapper tab page.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@843 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/docindex.html
+++ b/www/docindex.html
@@ -29,7 +29,8 @@
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
                 <li><a href="heapdump.html">Browsing a Heap Dump</a></li>
                 <li><a href="mbeans_tab.html">Working with MBeans</a></li>
-            </ul>
+                <li><a href="jconsole_plugin_wrapper_tab.html">JConsole Plug-In Wrapper Tab</a></li>
+              </ul>
             </li>
             <li><a href="troubleshooting.html">Troubleshooting Guide</a></li>
             <li><a href="build.html">Build Guide</a></li>
