Changed 'the JVM' to 'a JVM'....
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@866 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/applications_local.html
+++ b/www/applications_local.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Working with Local Applications</h1>
         <hr />
-        <p>When you start VisualVM, each Java application running on the local JVM is displayed as a node under the Local node in the <a href="applications_window.html">Applications window</a>.
+        <p>When you start VisualVM, each Java application running on a local JVM is displayed as a node under the Local node in the <a href="applications_window.html">Applications window</a>.
         You can expand an application node to see the profiler snapshots, thread dumps and heap dumps of the application.
         Right-clicking an application node or sub-node invokes a popup menu enabling you to choose various actions.</p>
         <p><b>Note:</b> The list of local applications will always include VisualVM.</p>    
@@ -44,8 +44,7 @@
 
 
         <h3>Monitoring Application Activity</h3>
-        <p>You can use VisualVM to monitor a local application and view high-level data on thread activity 
-        and memory heap and garbage collection in the VM.</p>
+        <p>You can use VisualVM to monitor a local application and view high-level data on thread activity and memory heap, and garbage collection in the VM.</p>
         <p>For more see <a href="monitor_tab.html">Monitoring an Application</a></p>
 
         <h3>Taking a Heap Dump</h3>
