--- a/www/mbeans_tab.html
+++ b/www/mbeans_tab.html
@@ -78,7 +78,7 @@ com.sun.example:type=Triangle,side=isosceles,name=3</pre>
 <h2>MBean Attributes</h2>
 <p>Selecting the Attributes tab displays all the attributes of an MBean. The following figure  shows all the attributes of the <span class="style1">Threading</span> platform MBean.</p>
 <img src="images/docs/mbean-attribs.png" alt="Viewing the attributes of the Threading MBean."/>
-<p>You can display additional information about an attribute by double-clicking on the attribute  value, if it appears in bold text. For example, if you click on  the value of the <span class="style1">HeapMemoryUsage</span> attribute of the <span class="style1">java.lang.Memory</span> MBean, you will  see a chart that looks something like the one shown below.</p>
+<p>You can display additional information about an attribute by double-clicking on the attribute  value, if it appears in bold text. For example, if you click on  the value of the <span class="style1">HeapMemoryUsage</span> attribute of the <span class="style1">java.lang.Memory</span> MBean, you will  see additional information about the attribute, as shown below.</p>
 <img src="images/docs/attrib-values.png" alt="Viewing the values of MBean attributes."/>
 <p>Double-clicking on numeric attribute values will display a chart that plots changes in  that numeric value. For example, double-clicking on the <span class="style1">CollectionTime</span> attribute of the  Garbage Collector MBean  <span class="style1">MarksweepCompact</span> will plot the time spent performing garbage collection.</p>
 <p><img src="images/docs/attrib-plotting.png" alt="Plotting changes in an attribute value."/></p>
