Corrected process for showing JConsole plugin  tab.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@868 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/jconsole_plugin_wrapper_tab.html
+++ b/www/jconsole_plugin_wrapper_tab.html
@@ -37,7 +37,8 @@
   <p><img src="images/docs/select-jconsole-plugin.png" alt="Selecting the JConsole plug-in." width="731" height="467" />    </li>
 <li>In the JConsole Plugins Options panel, you can also set the polling period. This option defines the regularity with which the JConsole Plugins tab will update the information presented by the different JConsole plug-ins that have been imported into the tab. 
 <li>Close the Options panel by clicking OK. 
-<li>Restart VisualVM. A JTop tab should now be visible in the JConsole Plugins tab.
+<li>In VisualVM's right-hand panel, close the tab of the process being monitored.
+<li>Restart the monitoring of the process by right-clicking on the process in the left-hand panel and selecting Open. A JTop tab should now be visible in the JConsole Plugins tab.
   <p><img src="images/docs/jtop-plugin.png" alt="The JConsole plugin tab, showing the JTop plug-in."/>
   <p>The JTop tab has been added, showing the CPU usage of the various threads running.  
 </ol>
