--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -291,10 +291,12 @@ public void uninstalled() {
 
     }
     
+    <b>@Override</b>
     public boolean supportsSaveViewsFor(Application arg0) {
         return false;
     }
 
+    <b>@Override</b>
     public void saveViews(Application arg0, Snapshot arg1) {
     }
     
@@ -326,7 +328,6 @@ public void uninstalled() {
     }
 
     <b>@Override</b>
-    @Override
     protected DataViewComponent createComponent() {
 
         <b>//Data area for master view:</b>
