--- a/www/api-quickstart.html
+++ b/www/api-quickstart.html
@@ -100,9 +100,8 @@
             <li><b>Subtab extension.</b> Within tabs
             such as those listed above, you can provide
             new subtabs. However, this is only possible if the tab has been
-            created to be "pluggable". The "Overview", "Monitor", and "Threads" tab
-            are all pluggable, but so are the "Thread Dump" tab, the "Heap Dump" tab,
-            and the "Host" tab. When you create a new subtab, 
+            created to be "pluggable". The following tabs are all pluggable:
+            "Overview", "Monitor", "Threads", "Heap Dump", "Host". When you create a new subtab, 
             you can specify its position in relation to the other subtabs within the tab.
             Subtabs can either be available to all application types or to specific application
             types.
