Added blurb about closing and opening app tab to make MBeans appear, following  comment from Jim Holmlund.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@911 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/mbeans_tab.html
+++ b/www/mbeans_tab.html
@@ -37,7 +37,7 @@
   <li>Check 'VisualVM-MBeans' and click 'Install'. </li>
   <li>Step through the on-screen  instructions.</li>
 </ol>
-<p>Now, i f you highlight a running Java application, right-click, and then select 'Open', you will see the MBeans tab in VisualVM's right-hand window.</p>
+<p>Now, if you highlight a running Java application, right-click, and then select 'Open', you will see the MBeans tab in VisualVM's right-hand window. If VisualVM is already monitoring a running application, in order for the MBeans tab to appear, you will need to close the tab for the monitored application in VisualVM's right-hand panel and then re-start the monitoring by right-clicking on the application and selecting 'Open' again. </p>
 <p><img src="images/docs/vvm-mbeans-tab.png" alt="VisualVM's MBeans tab" width="902" height="592" /></p>
 <h2>Displaying MBeans in VisualVM</h2>
 <p>The MBeans tab displays information about all the MBeans registered with the platform  MBean server. The MBeans tab allows you to access  the full set of the platform MBean instrumentation. In addition, you can monitor and manage your  own applications' MBeans using the MBeans tab.</p>
