add conclusion section and link
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1000 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -11,7 +11,7 @@
         
         <p>This getting started guide should help you quickly get up and running with the VisualVM.
         This guide will demonstrate how to install VisualVM and add functionality to the tool by installing a plugin from the VisualVM update center.
-        This guide will show you how to launch VisualVM and view some of the information you can get about an application running on a local JVM and a remote JVM.</p>
+        This guide will show you how to launch VisualVM and view some of the information you can get about an application running on local and remote JVMs.</p>
         
         <h3>Installing VisualVM</h3>
         <ol>
@@ -130,7 +130,8 @@
         title="Screenshot of Plugins window">
         <p class="small">Screenshot of Plugin manager with the VisualVM-MBeans plugin selected.</p>
 
-        <p>This document highlights some of the features of VisualVM.
+        <h2>Additional VisualVM Documentation</h2>
+        <p>This document introduces some of the features of VisualVM.
         VisualVM is designed to be an intuitive visual interface that enables you to 
         easily explore information about Java applications running on local and remote JVMs. 
         For more detailed information about working with VisualVM features, see 
