--- a/www/jmx_connections.html
+++ b/www/jmx_connections.html
@@ -8,7 +8,6 @@
 <style type="text/css">
 <!--
 .style1 {font-family: "Courier New", Courier, monospace}
-.style3 {font-family: "Courier New", Courier, monospace; font-style: italic; }
 -->
 </style>
 </head>
@@ -16,26 +15,35 @@
 <body>
 <h1>Connecting to  JMX Agents Explicitly </h1>
 <hr />
-<p>Java Management Extentions (JMX)  technology can be used to monitor and manage any Java technology-based applications (Java applications) that are running in either a local or a remote Java Virtual Machine (JVM). Java applications are exposed for monitoring and management by JMX agents by setting the <span class="style1">com.sun.management.jmxremote.*</span> system properties when the applications are launched. Setting these system properties enables the Java platform, Standard Edition (Java SE platform) <em>out-of-the-box</em> monitoring and management capability, automatically enabling the platform MBean server in the JVM software, and registering MBeans in it that expose the application for management by any appropriately configured JMX client application. VisualVM is one such JMX client application. This page describes how to  make explicit JMX connections from VisualVM  to running applications. The documents below  provide useful  background information. </p>
+<p>Java Management Extensions (JMX)  technology can be used to monitor and manage any Java technology-based applications (Java applications) that are running in either a local or a remote Java Virtual Machine (JVM). Java applications are automatically exposed for monitoring and management by JMX agents  if they are run on the Java platform, Standard Edition (Java SE platform) version 6. If the Java applications are  running on the Java 2 platform, Standard Edition (J2SE platform) 5.0, you can expose them manually for monitoring and management  by setting the  <span class="style1">com.sun.management.jmxremote.*</span> system properties  when the applications are launched. Setting these system properties, or running your applications on version 6 of the Java SE platform, enables the platform's <em>out-of-the-box</em> monitoring and management capability, automatically enabling the platform MBean server in the JVM software, and registering MBeans in it that expose the application for management by any appropriately configured JMX client application. VisualVM is one such JMX client application. </p>
+<blockquote>
+  <p>	<strong>NOTE</strong>: For a very brief introduction to JMX technology, MBeans, the platform MBean server, and how to monitor and manage MBeans using VisualVM, see the <a href="mbeans_tab.html">VisualVM MBeans Tab</a> page. For an introduction to the Java SE platform's out-of-the-box monitoring and management capability, see <a href="http://java.sun.com/javase/6/docs/technotes/guides/management/agent.html"><em>Monitoring and Management Using JMX Technology</em></a> in the <a href="http://java.sun.com/javase/6/docs/technotes/guides/management/toc.html">Java SE Platform Monitoring and Management Guide</a>.</p>
+</blockquote>
+<h2>When Are Explicit JMX Connections Necessary? </h2>
+<p>As stated above, VisualVM will automatically detect and connect to Java applications that are running on version 6 of the Java SE platform or that have been started with the correct system properties on version 5.0. However, because there are  cases in which VisualVM cannot automatically discover and connect to  
+JMX agents that are running in a target Java application, a means of creating explicit JMX connections has also been added to VisualVM. </p>
+<p>The circumstances in which VisualVM will not automatically discover  JMX agents, and thus the Java applications they expose, are the following:</p>
 <ul>
-  <li><strong>	</strong>For a very brief introduction to JMX technology, MBeans, the platform MBean server, and how to monitor and manage MBeans using VisualVM, see the <a href="mbeans_tab.html">VisualVM MBeans Tab</a> page. </li>
-  <li>For an introduction to the Java SE platform's out-of-the-box monitoring and management capability, see <a href="http://java.sun.com/javase/6/docs/technotes/guides/management/agent.html"><em>Monitoring and Management Using JMX Technology</em></a> in the <a href="http://java.sun.com/javase/6/docs/technotes/guides/management/toc.html">Java SE Platform Monitoring and Management Guide</a>. </li>
+  <li>The target application is running on the J2SE 5.0 platform and the&nbsp; <span class="style1">-Dcom.sun.management.jmxremote*</span> properties have not&nbsp; been specified. </li>
+  <li>The target application is running on the same host as VisualVM but was started by a different user than the one who started VisualVM. VisualVM discovers running applications using the <a href="http://java.sun.com/javase/6/docs/technotes/tools/share/jps.html" class="style1">jps</a> tool,  which can only discover Java applications started by&nbsp; the same user as the one who starts the VisualVM tool. </li>
+  <li>The target application is running on a remote host where <a href="http://java.sun.com/javase/6/docs/technotes/tools/share/jstatd.html" class="style1">jstatd</a> is not running or is running but was started by a different user. The <span class="style1">jstatd</span> daemon provides an interface that allows remote monitoring applications to connect to Java applications on the host where it is running. </li>
 </ul>
 <h2>Making an Explicit JMX Connection  </h2>
 <p>Before you can make an explicit JMX connection from VisualVM to a running application, this application must be started with the correct system properties. The system properties in question are the following:</p>
 <ul>
   <li><code>com.sun.management.jmxremote.port</code>, to specify the port number through which the application will be exposed </li>
-  <li><code>com.sun.management.jmxremote.ssl</code>, to specify whether secure sockets layer (SSL) encyption will be activated to secure the connection to the application </li>
+  <li><code>com.sun.management.jmxremote.ssl</code>, to specify whether secure sockets layer (SSL) encryption will be activated to secure the connection to the application </li>
   <li><code>com.sun.management.jmxremote.authenticate</code>, to specify whether the connection will be password protected</li>
 </ul>
 <h3>Local JMX Connections</h3>
 <p>This section shows an example of how to connect VisualVM to a local application via an explicit JMX connection.</p>
 <ol>
-  <li>Start the Java SE 6 platform's sample Notepad   application, setting the system properties to enable the Java SE platform's out-of-the-box monitoring and management capability, using the command shown below, where <span class="style3">$JAVA_HOME</span> is the location in which the Java Development Kit (JDK) is installed:
+  <li>Start a Java  application on the J2SE platform version 5.0, setting the system properties to enable the Java SE platform's out-of-the-box monitoring and management capability, using the command shown below:
     <pre>java -Dcom.sun.management.jmxremote.port=3333 \
      -Dcom.sun.management.jmxremote.ssl=false \
      -Dcom.sun.management.jmxremote.authenticate=false \
-     -jar <em>$JAVA_HOME</em>\demo\jfc\Notepad\Notepad.jar</pre>In the command above, the Notepad program is launched with the Java SE platform's out-of-the-box monitoring and management capability configured as follows:
+     <em>YourJavaApp</em></pre>
+    In the command above,  <span class="style1"><em>YourJavaApp</em></span> is launched with the Java SE platform's out-of-the-box monitoring and management capability configured as follows:
   
     <ul>
   <li>The Notepad application is exposed for monitoring and management via port 3333.</li>
@@ -57,24 +65,19 @@
 <h3>Remote JMX Connections</h3>
 <p>You can also make explicit JMX connections to applications running on remote hosts, as explained below:</p>
 <ol>
-  <li>Right click on Remote in the Applications tree, and select Add Remote Host. 
-  <p><img src="images/docs/connect-remote-host.png" alt="Connecting to a remote host" width="283" height="184" /></li>
-  <li>Provide the name of the host you want to connect to in the Add Remote Host dialog, and click OK.
-    <p><img src="images/docs/add-remote-host.png" alt="Adding a remote host." width="368" height="162" /> </li>
-  <li>If <span class="style1">jstatd</span> is running on the remote host, you will see the Java applications that are running on that remote host. However, you will not necessarily be able to monitor and manage them in VisualVM if they were started by a different user to yourself. 
-    <p><img src="images/docs/remote-apps.png" alt="Applications running in a remote host." width="285" height="222" />  
-  <p>Furthermore, only applications that are exposed by the platform MBean server for each JVM software instance running in the remote host are visible. Other applications that have been exposed for remote monitoring and management via a different JMX agent to the platform MBean server can also be running on the remote host. To connect to these applications, you need an explicit JMX connection.  </li>
-  <li>Right click on the remote host name and select Add JMX Connection.
+  <li>Right click anywhere in the blank area under the application tree and select Add JMX Connection.
 
     <p><img src="images/docs/add-jmx-remote.png" alt="Adding a JMX connection to a remote application." width="285" height="247" />      </li>
-  <li>Provide the port number for a running JMX agent, that has been started with the appropriate system properties to allow remote management.
+  <li>Provide the machine name and port number for a running JMX agent, that has been started with the appropriate system properties to allow remote management.
   Here the JMX agent has been exposed on port 2222 of the machine <span class="style1">curcuma</span>.
-  <p><img src="images/docs/add-jmx-remote2.png" alt="Adding a remote JMX connection." width="439" height="300" /> </li>
-  <li>If the JMX connection is secured, you will be prompted for a username and password.
-  <p><img src="images/docs/security-credentials.png" alt="JMX connector security credentials." width="405" height="167" /> </li>
+  <p><img src="images/docs/add-jmx-remote2.png" alt="Adding a remote JMX connection." width="439" height="300" /> 
+  <p>If you know that the JMX agent has been protected with a username and password, enter them in the Add JMX Connection dialog and specify whether you want the credentials to be saved so <br />
+    that when VisualVM restarts it will silently reconnect to the JMX agent without prompting the user for the security credentials again.    </li>
+  <li>If the JMX connection is secured and you did not provide a username and password in the Add JMX Connection dialog, you will be prompted to provide a username and password.
+    <p><img src="images/docs/security-credentials.png" alt="JMX connector security credentials." width="405" height="167" /> </li>
   <li>If you know the correct username and password, the JMX connection will be established, and the JMX connection will appear in the application tree, with a special JMX connection icon.
   <p><img src="images/docs/remote-jmx-icon.png" alt="Remote JMX connection shown in application tree." width="285" height="224" /> </li>
-  <li>Right click on the remote JMX connection and select Open. You can now monitor and manage  remote applications via the JMX connection, and manipulate any MBeans that are registered in the MBean server exposed by this connection.
+  <li>Right click on the remote JMX connection and select Open. You can now monitor and manage  remote applications via the JMX connection, and manipulate any MBeans that are registered in the MBean server exposed by this connection (note that the VisualVM-MBeans plugin must be installed if you want to access to the <a href="mbeans_tab.html">MBeans tab</a>.)<br />
   <p><img src="images/docs/remote-jmx-mbeans.png" alt="MBeans in a remote MBean server." width="604" height="482" /> </li>
 </ol>
 <h2>Further Reading About JMX Technology </h2>
