--- a/www/jmx_connections.html
+++ b/www/jmx_connections.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>VisualVM: Connecting to  JMX Agents Explicitly</title>
+<title>Connecting to  JMX Agents Explicitly</title>
 <style type="text/css">
 <!--
 .style1 {font-family: "Courier New", Courier, monospace}
