--- a/www/gettingstarted.html
+++ b/www/gettingstarted.html
@@ -134,8 +134,9 @@
         <p>This document introduces some of the features of VisualVM.
         VisualVM is designed to be an intuitive visual interface that enables you to 
         easily explore information about Java applications running on local and remote JVMs. 
-        For more detailed information about working with VisualVM features, see 
-        <a href="https://visualvm.dev.java.net/docindex.html">VisualVM Documentation and Resources</a>.</p>
-        
+        For more detailed information about working with VisualVM features, see the following documents:</p>
+        <ul>
+            <li><a href="https://visualvm.dev.java.net/docindex.html">VisualVM Documentation and Resources</a>.</li>
+        </ul>
     </body>
 </html>
