--- a/www/intro.html
+++ b/www/intro.html
@@ -33,7 +33,7 @@
         <img src="images/docs/vvm-start.png" style="border:1px solid;" alt="screenshot of VisualVM window with Start screen" 
         title="screenshot of VisualVM window with Start screen" width="600" height="430" />
         <p>When you first start VisualVM, the Applications window is visible in the left side of the window and the Start Page is 
-        visible in the right side. 
+        visible in the right side in the main window. 
         The Start Page contains links to VisualVM documentation web pages and additional resources.<br />
         <b>Note:</b> The Start Page opens by default each time you start VisualVM. 
         You can open the Start Page at any time by choosing Help &gt; Start Page from the main menu.</p>
