--- a/www/overview_tab.html
+++ b/www/overview_tab.html
@@ -21,12 +21,12 @@
         <ul>
             <li><b>PID.</b> This is the process ID of the application. The process ID is also displayed next to the 
             application node in the Applications window.</li>
-            <li><b>Host</b> This is the location of the system that the application is running on.</li>
-            <li><b>Main class</b></li>
+            <li><b>Host.</b> This is the location of the system that the application is running on.</li>
+            <li><b>Main class.</b> The class containing the <tt>main</tt> method.</li>
             <li><b>Arguments.</b> Displays any options passed to the application on startup.</li>
-            <li><b>JVM</b> This is the JDK version of the JVM.</li>
-            <li><b>Java Home</b> This is the location of the JDK.</li>
-            <li><b>JVM flags</b> This displays any JVM flags used when starting the JDK.</li>
+            <li><b>JVM.</b> This is the JDK version of the JVM.</li>
+            <li><b>Java Home.</b> This is the location of the JDK.</li>
+            <li><b>JVM flags.</b> This displays any JVM flags used when starting the JDK.</li>
             <li><b>Heap dump on OOME.</b> This displays the status of the Heap Dump on OOME option.
             When enabled, a heap dump is taken when the application encounters an OutOfMemory exception.
             You can enabled or disable the option in the application popup menu.</li>
