--- a/www/applications_local.html
+++ b/www/applications_local.html
@@ -42,7 +42,7 @@
         <ul>
             <li><a href="overview_tab.html">Overview</a></li>
             <li><a href="monitor_tab.html">Monitor</a></li>
-            <li><a href="threads_tab.html">Threads</a></li>
+            <li><a href="threads.html">Threads</a></li>
             <li><a href="profiler.html">Profiler</a></li>
         </ul>
         
