update pages to add new images, changes
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1010 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/monitor_tab.html
+++ b/www/monitor_tab.html
@@ -10,7 +10,8 @@
         When you open an application in VisualVM, each application opens in a new tab in the main window.
         You can have multiple application tabs open.</p>
         
-
+<p>You can use VisualVM to monitor a local application and view high-level data on thread activity and 
+memory heap, and garbage collection in the VM.</p>
         <p>The Monitor tab is a sub-tab of the application tab and displays real-time, high-level data about the memory heap
         thread activity and classes loaded in the VM.
         Monitoring an application imposes low overhead and can be used for extended periods.</p>
