--- a/www/profiler.html
+++ b/www/profiler.html
@@ -30,7 +30,7 @@
         When profiling results are available they are automatically displayed in the Profiler tab.</p>
         
         <h4>Using the toolbar</h4>
-        <p>The Profiler toolbar has the following buttons that enable you to work with profiling results.</p>
+        <p>You can use the following buttons in the Profiling Results toolbar to work with profiling results:</p>
         <ul>
             <li><b>Update Result Automatically.</b>
             When active, the displayed profiling results are automatically updated at short intervals (about 2 seconds). </li>
