--- a/www/docindex.html
+++ b/www/docindex.html
@@ -23,7 +23,15 @@
             <li><a href="intro.html">Introduction to VisualVM</a>
                 <ul>
                 <li><a href="applications_window.html">Using the Applications Window</a></li>
-                <li><a href="applications_local.html">Working with Local Applications</a></li>
+                <li><a href="applications_local.html">Working with Local Applications</a>
+                    <ul>
+                        <li><a href="overview_tab.html">Viewing Application Overview</a></li>
+                        <li><a href="monitor_tab.html">Monitoring an Application</a></li>
+                        <li><a href="threads.html">Monitoring Application Threads</a></li>
+                        <li><a href="profiler.html">Profiling Applications</a></li>
+                    </ul>
+                
+                </li>
                 <li><a href="applications_remote.html">Working with Remote Applications</a></li>
                 <li><a href="coredumps.html">Working with Coredumps</a></li>
                 <li><a href="snapshots.html">Working with Snapshots</a></li>
