update snapshots to add images
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1016 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/monitor_tab.html
+++ b/www/monitor_tab.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Monitoring an Application</title>
+        <title>Monitoring an Application with VisualVM</title>
         <link rel="stylesheet" type="text/css" href="default.css" />
     </head>
     <body>
