--- a/www/profiler.html
+++ b/www/profiler.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="default.css" />
     </head>
     <body>
-        <h1>Profiling Applications with VisualVM</h1>
+        <h1>Profiling Applications</h1>
         <hr />
         <p>VisualVM presents data for local and remote applications in a tab specific for that application.
         You can have multiple application tabs open.
